# mint

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_umn.sh
EEProjectResults/: dihedral.py  generate.py  slurm_generate.sh  slurm_train.sh  train.py
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
main/: generate.py  slurm_train.sh  train.py
mint/: CLIparser.py  module.py  state.py  utils.py
mint/data/: dataset.py  loader.py
mint/data/ADP/: AA_valid.prmtop  ADP_dataset.py  README.md
mint/data/moons/: moons_dataset.py
mint/experiment/: abstract.py  equivariance_test.py  free_energy.py  free_energy_test.py  generate.py  multi.py  train.py
mint/interpolant/: __init__.py  abstract.py  corrector.py  interpolants.py
mint/model/: MLP.py  MPN.py
mint/model/embedding/: equilibrium_embedder.py  time.py
mint/model/equivariant/: PaINNLike.py  PaiNN.py  __init__.py  abstract.py  transformer.py
mint/prior/: abstract.py  normal.py
tests/: config.yaml  dihedral.py  generate.py  generate_mlp.py  generate_painn.py  generate_painn_traj.py  output.xyz  sampling_test.ipynb  slurm_generate.sh  slurm_test.sh  test.ipynb  test.py  test_graph_transformer.py  test_integrate.py  test_interpolate.py  test_mlp.py  test_painn.py  traj_graph000.xyz  traj_graph001.xyz  traj_graph002.xyz
