[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mint"
version = "0.1.0"
description = "Molecular Interpolant using Neural Transporter"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
# We’re using the “flat” layout (no src/). Find the mint package + subpackages.
packages = { find = { include = ["mint*"] } }

# Include non-.py files shipped under mint/data/** in the wheel
[tool.setuptools.package-data]
mint = [
  "data/**/*",
]

# (Optional) if you also want non-data files like md, pdb, etc., this wildcard already covers them.
